src/a4/Kalkulator.g4
grammar Kalkulator;
import Lexer;

stat    :   expr NL                                # printExpr
            | NL                                   # blank;
expr    :   '(' expr ')'                           # brackets
            | <assoc=left> expr op=('*'|'/') expr  # MultDiv
            | <assoc=left> expr op=('+'|'-') expr  # AddSub
            | INT                                  # int
            ;
